# solana-airdrop-service

./: Cargo.toml  README.md
src/: main.rs
