[package]
name = "solana-airdrop-service"
version = "0.1.1"
edition = "2021"
description = "A background service for scheduling Solana airdrops."
repository = "https://github.com/oguzhaniptes/solana-airdrop-service"
license = "MIT"
readme = "README.md"
keywords = ["solana", "airdrop", "service"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]


[[bin]]
name = "solana-airdrop-service"
path = "src/main.rs"

[dependencies]
log = "0.4"
daemonize = "0.5.0"
simplelog = "0.12.2"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
which = "7.0.2"
